--- a/index.html
+++ b/index.html
@@ -7,21 +7,35 @@
         <link rel="stylesheet" href="css/style.css">
         <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+        <!-- Fonts -->
+        <link href="https://fonts.googleapis.com/css?family=Raleway:100,600" rel="stylesheet" type="text/css">
   </head>
+
+  <style>
+
+  rect {
+    fill: none;
+    pointer-events: all;
+  }
+
+  circle {
+    fill: none;
+    stroke-width: 2.5px;
+  }
+  </style>
 
   <body>
 
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css"/>
 
-<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+    <!-- jQuery library -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 
-<!-- jQuery library -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script type="text/javascript" src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
 
-<script type="text/javascript" src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
-
-<!-- Latest compiled JavaScript -->
-<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    <!-- Latest compiled JavaScript -->
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -35,13 +49,15 @@
 </script>
 
 <header id="banner" class="navbar navbar-default navbar-fixed-top">
+  <link rel="shortcut icon"
+     href="https://s31.postimg.org/67g2pvv7f/Screen_Shot_2016_06_26_at_3_46_05_PM.png/favicon.ico"/>
   <div class="container"><a href="#top" class="scrollable"><img src="https://s31.postimg.org/67g2pvv7f/Screen_Shot_2016_06_26_at_3_46_05_PM.png" alt="trip logo" title="trip logo"/></a>
     <button type="button" data-toggle="collapse" data-target="#navbar" aria-expanded="false" class="navbar-toggle collapsed"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
     <nav id="navbar" role="navigation" class="navbar-collapse collapse">
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#top" class="scrollable">About</a></li>
         <li><a href="#portfolio" class="scrollable">Portfolio</a></li>
-        <li><a href="#contact" class="scrollable">Contact</a></li>
+        <li><a href="#playground" class="scrollable">Playground</a></li>
       </ul>
     </nav>
   </div>
@@ -50,16 +66,17 @@
 <main>
   <header>
     <div class="intro-text">
-      <p>My name is Keisuke Sato and I'm a Java & C++ programmer.
+      <p>My name is Keisuke Sato and I'm a programmer.
         <br/>1993 - 2009: lived in Japan
         <br/>2009 - 2012: lived in Singapore
-        <br/>2012 - present: live in the United States
+        <br/>2012 - 2017: lived in the United States
+        <br/>2017 - present: Started working as a programmer in Tokyo
         <br/>
       <br/>I had an internship at Malaysia & Cambodia.
-      <br/>I like exploring new places!! </p>
+      <br/>I love traveling!! My favorite country is India!!</p>
      <hr class="style-white"/><p2>IT x TRIP x BUSINESS</p2>
     </div>
-    <img src="https://s31.postimg.org/loi7syqp7/S_2629634.jpg" alt="my profile picture"/>
+    <img src="https://firebasestorage.googleapis.com/v0/b/laravel-659e1.appspot.com/o/KeisukeWithMac.jpg?alt=media&token=30979586-69ca-4d5a-9c2d-53710c7fd5d8" alt="my profile picture"/>
 
   </header>.
   <!-- Gallery Grid Section-->
@@ -67,6 +84,8 @@
     <h2>Portfolio</h2>
     <hr class="style-black"/>
     <ul class="grid">
+      <li><a target="_blank" href="https://github.com/ksato0607/LiveWell"><img src="https://firebasestorage.googleapis.com/v0/b/laravel-659e1.appspot.com/o/mobileapps.jpg?alt=media&token=d82976fe-af46-49e6-ae7b-c21b88ee0451" alt="Mobile Apps"/> <font color="#666"><br/>Mobile Apps with Xamarin Studio C# </font></a></li>
+      <li><a target="_blank" href="https://triptriptrip.herokuapp.com/"><img src="https://firebasestorage.googleapis.com/v0/b/random-3e503.appspot.com/o/Screen%20Shot%202017-04-15%20at%2017.22.11.png?alt=media&token=f26cfdc4-0602-429b-ba77-a800799ef750" alt="Website"/> <font color="#666">Responsive website with PHP framework Laravel </font></a></li>
       <li><a target="_blank" href="https://youtu.be/zGwe5Ly1mkk"><img src="https://s32.postimg.org/k3b13itmd/Screen_Shot_2016_06_26_at_9_03_05_PM.png" alt="dungeon game"/> <font color="#666"> Dungeon Game with C++ </font></a></li>
       <li><a target="_blank" href="http://iowainternational.wix.com/iowainternational"> <img src="https://s32.postimg.org/8oavnxcx1/Screen_Shot_2016_06_26_at_9_06_20_PM.png" alt="website"/><br/><font color="#666">EC Website</font></a> </li>
       <li><img src="https://s31.postimg.org/4jobky7qz/labview1_2.png" alt=""/>Control System for Nd:YAG Laser</li>
@@ -75,7 +94,7 @@
   </section>
   <!-- Contact Section-->
   <br/>
-  <section id="contact"  style="background-color:#1e1e1e;">
+  <!-- <section id="contact"  style="background-color:#1e1e1e;">
     <h2 style="color:#fff">Contact Me</h2>
     <hr class="style-white"/>
     <div>
@@ -101,7 +120,46 @@
         <p></p>
       </div>
     </div>
-  </section>
+  </section> -->
+
+    <div id="playground">
+    <script src="//d3js.org/d3.v3.min.js"></script>
+    <script>
+
+    var width = Math.min(1300, innerWidth),
+        height = Math.max(500, innerHeight);
+
+    var i = 0;
+
+    var svg = d3.select("body").append("svg")
+        .attr("width", width)
+        .attr("height", height);
+
+    svg.append("rect")
+        .attr("width", width)
+        .attr("height", height)
+        .on("ontouchstart" in document ? "touchmove" : "mousemove", particle);
+
+    function particle() {
+      var m = d3.mouse(this);
+
+      svg.insert("circle", "rect")
+          .attr("cx", m[0])
+          .attr("cy", m[1])
+          .attr("r", 1e-6)
+          .style("stroke", d3.hsl((i = (i + 1) % 360), 1, .5))
+          .style("stroke-opacity", 1)
+        .transition()
+          .duration(2000)
+          .ease(Math.sqrt)
+          .attr("r", 100)
+          .style("stroke-opacity", 1e-6)
+          .remove();
+
+      d3.event.preventDefault();
+    } </script>
+  </div>
+
   <!-- Scroll to Top Button (Only supposed to be visible on small and small screen sizes)-->
   <div class="scroll-top"><a href="#top" class="button scrollable"><i class="fa fa-chevron-up"></i></a></div>
 </main>
@@ -116,7 +174,7 @@
       <h3>Around the Web</h3>
       <div class="social"><ul>
         <li><a target="_blank" href="https://www.linkedin.com/in/keisuke-sato-15a601a0?trk=nav_responsive_tab_profile_pic" class="button social"><i class="fa fa-fw fa-linkedin"></i></a></li>
-        <li><a target="_blank" href="https://github.com/ksato0607/hello-world" class="button social"><i class="fa fa-fw fa-github"></i></a></li>
+        <li><a target="_blank" href="https://github.com/ksato0607" class="button social"><i class="fa fa-fw fa-github"></i></a></li>
         <li><a target="_blank" href="https://twitter.com/trip_go_trip" class="button social"><i class="fa fa-fw fa-twitter"></i></a></li>
       </ul>
           </div>
